<resources>
    <string name="app_name">My SuperMay</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_title">คนแถวนี้กินอะไร ?</string>
    <string name="btn_facebook">ลงชื่อเข้าใช้ Facebook</string>
    <string name="btn_email">ลงชื่อเข้าใช้ด้วยอีเมล์</string>
    <string name="btn_register">สมัครชิก</string>
    <string name="close">ปิด</string>
    <string name="title_activity_maps">Map</string>
</resources>
