<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <TextView
        android:layout_margin="10dp"
        android:textSize="@dimen/h2"
        android:layout_alignParentRight="true"
        android:text="@string/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--Content-->
    <LinearLayout
        android:layout_margin="40dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Logo-->
        <ImageView
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!--title-->
        <TextView
            android:textSize="@dimen/h3"
            android:layout_margin="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!--facebook button-->
        <Button
            android:textSize="@dimen/h2"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:background="@drawable/btn_facebook"
            android:text="@string/btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--email button-->
        <Button
            android:textSize="@dimen/h2"
            android:background="@drawable/btn_email"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/btn_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--register -->
        <Button
            android:textColor="@color/colorYollow"
            android:textStyle="bold"
            android:textSize="@dimen/h2"
            android:background="@drawable/btn_register"
            android:text="@string/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>


</RelativeLayout>